--- a/lusir-util-parent/pom.xml
+++ b/lusir-util-parent/pom.xml
@@ -9,6 +9,7 @@
 
 	<properties>
 		<!-- 主要依赖库的版本定义 -->
+		<lusir.version>0.0.1-SNAPSHOT</lusir.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -65,6 +66,16 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.lusir</groupId>
+				<artifactId>lusir-util-common</artifactId>
+				<version>${lusir.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lusir</groupId>
+				<artifactId>lusir-util-compress</artifactId>
+				<version>${lusir.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>net.jpountz.lz4</groupId>
 				<artifactId>lz4</artifactId>
